# pyparser

./: .coveragerc.toml  .editorconfig  .gitignore  .pytest.toml  .ruff.toml  .ty.toml  README.md  flake.nix  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml  update.yml
src/: __init__.py  models.py  parser.py
