[project]
  dependencies = [
    "packaging>=26.0",
  ]

  description     = "`pyproject.toml` parser!"
  name            = "pyparser"
  readme          = "README.md"
  requires-python = ">=3.14.2"
  version         = "0.0.1"

[dependency-groups]
  dev = [
    "pytest-cov>=7.0.0",
    "pytest>=9.0.0",
    "ruff>=0.15.0",
    "ty>=0.0.20",
  ]
